--- a/src/main/cards362app/css/cards362.css
+++ b/src/main/cards362app/css/cards362.css
@@ -1,20 +1,20 @@
 html { 
-	background-color:#092E20; 
+	background-color: #092E20; 
 }
 
 body { 
-	position:relative;
-	border-radius:8px; 
-	box-shadow:black 0px 0px 2px; 
-	width: 600px; 
-	background:#FFF; 
-	margin:20px auto; 
-	border:solid 1px black; 
+	position: relative;
+	border-radius: 8px; 
+	box-shadow: black 0px 0px 2px; 
+	width: 700px; 
+	background: #FFF; 
+	margin: 20px auto; 
+	border: solid 1px black; 
 	font-family: arial, sans-serif; 
-	padding:50px;  
+	padding: 50px;  
 }
 #buttons {
-	text-align:center;
+	text-align: center;
 }
 
 a img {
@@ -24,66 +24,72 @@ a img {
 	border: 0;			
 }
 button {
-	height:30px;
-	width:100px;
-	margin:8px auto;
+	height: 30px;
+	width: 100px;
+	margin: 8px auto;
 }
 img.preload {
-	display:none;
+	display: none;
 }
 h1 {
-	font-size:60px;
-	text-align:center;
-	padding:0px;
-	margin:10px auto;
+	font-size: 60px;
+	text-align: center;
+	padding: 0px;
+	margin: 10px auto;
 }
 
 #card-table {
-	background-color:green;
-	height:400px;
-	width:600px;
-	border:solid 6px brown;
-	border-radius:8px;
-	-webkit-border-radius:8px;
-	-moz-border-radius:8px;
-	-ms-border-radius:8px;
-	-o-border-radius:8px;
-	box-shadow:#111 1px 1px 2px;
+	background-color: green;
+	height: 600px;
+	width: 600px;
+	border: solid 6px brown;
+	border-radius: 8px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	-ms-border-radius: 8px;
+	-o-border-radius: 8px;
+	box-shadow: #111 1px 1px 2px;
 }
 #fixed-plane {
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	width: 100%;
+	height: 100%;
 }
 #rotatable-plane {
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	width: 100%;
+	height: 100%;
 }
 .player-rotated {
-	transform: rotate(90deg);
+	transform: rotate(0deg);
+	transform-origin: 50% 50%;
 }
 .player-upright {
-	transform: rotate(-90deg);
+	transform: rotate(0deg);
+	transform-origin: 50% 50%;
 }
 a:visited {color:blue;}
 
 #deal {
 	position: absolute;
-	left:310px;
-	top:150px;
+	left: 310px;
+	top: 150px;
 }
 
 footer {
 	font-size : 12px;
-	color:grey;
-	margin:10px;
+	color: grey;
+	margin: 10px;
 }
 
 footer a, footer a:visited{
-	color:grey;
+	color: grey;
 }
 
 footer a:hover {
-	color:black;
+	color: black;
 }
