--- a/src/main/cards362app/css/cards362.css
+++ b/src/main/cards362app/css/cards362.css
@@ -64,6 +64,9 @@ h1 {
 	width: 100%;
 	height: 100%;
 }
+#current-player {
+    text-align: center;
+}
 .player-rotated {
 	transform: rotate(0deg);
 	transform-origin: 50% 50%;
