--- a/src/main/cards362app/css/cards362.css
+++ b/src/main/cards362app/css/cards362.css
@@ -38,6 +38,22 @@ h1 {
 	margin: 10px auto;
 }
 
+#menu {
+	position: absolute;
+	top: 100px;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	background-color:green;
+	border:solid 6px brown;
+	border-radius:8px;
+	-webkit-border-radius:8px;
+	-moz-border-radius:8px;
+	-ms-border-radius:8px;
+	-o-border-radius:8px;
+	box-shadow:#111 1px 1px 2px;
+	z-index:30;
+}
+
 #card-table {
 	background-color: green;
 	height: 600px;
@@ -49,6 +65,7 @@ h1 {
 	-ms-border-radius: 8px;
 	-o-border-radius: 8px;
 	box-shadow: #111 1px 1px 2px;
+	/*transform: rotate3d(-1, 0.5, 1, 80deg);*/
 }
 #fixed-plane {
 	position: absolute;
@@ -76,6 +93,18 @@ h1 {
 	transform-origin: 50% 50%;
 }
 a:visited {color:blue;}
+
+#overlay {
+	position:absolute;
+	background-color:grey;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	padding:10px;
+	opacity:.8;
+	z-index:20;
+}
 
 #deal {
 	position: absolute;
